# argon

./: .gitignore  Cargo.nix  Cargo.toml  Makefile  README.md  apps.nix  flake.nix  rust.nix
.cargo/: config.toml
.github/workflows/: test.yaml
crates/: patched-simd-json
crates/argon/: Cargo.toml
crates/argon/src/: gron.rs  main.rs  seccomp.rs  test.rs  ungron.rs
patches/: avx2_deser.new.rs  avx2_deser.patch  charutils.new.rs  charutils.patch  serde_se_pp.new.rs  serde_se_pp.patch  simd-json-keep-escaped.patch
src/: gron.rs  main.rs  test.rs  ungron.rs
test/: escaping.json
testcases/: escaping.json
testcases/gron/: allbytes.js  allbytes.json  c1-control.js  c1-control.json  escaped-control-chars.js  escaped-control-chars.json
testcases/roundtrip/: b.json  dont-escape-upper-control-plane.json
testcases/ungron/: a.js  a.json
