[package]
name = "argon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
memchr = "2"
mimalloc = { version = "0.1", default-features = false }
patched-simd-json = { path = "../patched-simd-json", package = "simd-json" }
rayon = "1"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
seccompiler = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"

[dev-dependencies]
include_dir = "0.7"
